--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
   --white-color: #ffffff;
 
 
-  --footer-top-bg: #f8f9fa;
+  --footer-top-bg: ##f3f4f5;
   --footer-top-text: #6c757d;
   --footer-top-heading: #343a40;
   --footer-top-link-hover: #0056b3;
